syntax = "proto3";

package session;

service SessionService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string err_msg = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string err_msg = 1;
}